tests/errors/sem.type-mismatch.struct-init-field.or
main :: () -> void {
    T :: struct { x := 10; };
    T.{false};
};
